lougout functionality trouble shoot - terry

--- a/src/css/Contact-Form-Clean.css
+++ b/src/css/Contact-Form-Clean.css
@@ -193,6 +193,7 @@ logoutHeader {
 #logoutParagraph {
   display: flex;
   justify-content: center;
+  /* padding-left: 1em; */
   width: 20em;
   margin: 1em;
 }
